app/src/main/kotlin/org/example/error/ErrorResponse.kt
package org.example.error

import kotlinx.serialization.Serializable

@Serializable
data class ErrorResponse(
    val code: String,
    val message: String,
    val details: String? = null
)
